fixing overview grid alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,6 @@ h1, h2, h3, p, ul, body {
 }
 
 body {
-	overflow: auto;
   color: #595959;
 }
 
@@ -129,6 +128,12 @@ section *:last-child {
 }
 .halfBlock {
   width: 50%;
+}
+.thirdBlock {
+  width: 33.3%;
+}
+.twoThirdBlock {
+  width: 66.6%;
 }
 
 
